Complete sign in page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,10 @@
 {
-    "signIn": "Sign in"   
+    "dontHaveAnAccount": "Don't have an account?",
+    "email": "Email",
+    "forgotYourPassword": "Forgot your password?",
+    "letsStart": "Let's start",
+    "password": "Password",
+    "signIn": "Sign in",   
+    "signUp": "Sign up",   
+    "welcome": "Welcome"   
 }
