--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,10 +1,15 @@
 {
+    "alreadyHaveAnAccount": "Already have an account?",
     "dontHaveAnAccount": "Don't have an account?",
     "email": "Email",
     "forgotYourPassword": "Forgot your password?",
+    "invalidEmail": "Invalid email",
     "letsStart": "Let's start",
     "password": "Password",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "repeatPassword": "Repeat password",
     "signIn": "Sign in",   
     "signUp": "Sign up",   
+    "weakPassword": "Weak password",   
     "welcome": "Welcome"   
 }
