Add complete forgot password design

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,13 +1,18 @@
 {
     "alreadyHaveAnAccount": "Already have an account?",
+    "checkYourEmail": "Check your email",
     "dontHaveAnAccount": "Don't have an account?",
     "email": "Email",
+    "enterYourEmailToResetYourPassword": "Enter your email to reset your password",
+    "forgottenPassword": "Forgotten password",
     "forgotYourPassword": "Forgot your password?",
+    "hello": "Hello",
     "invalidEmail": "Invalid email",
     "letsStart": "Let's start",
     "password": "Password",
     "passwordsDoNotMatch": "Passwords do not match",
     "repeatPassword": "Repeat password",
+    "send": "Send",   
     "signIn": "Sign in",   
     "signUp": "Sign up",   
     "weakPassword": "Weak password",   
