--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,13 +1,18 @@
 {
     "alreadyHaveAnAccount": "¿Ya tienes una cuenta?",
+    "checkYourEmail": "Revisa tu correo",
     "dontHaveAnAccount": "¿No tienes una cuenta?",
     "email": "Correo electrónico",
+    "enterYourEmailToResetYourPassword": "Ingresa tu correo electrónico para restablecer tu contraseña",
+    "forgottenPassword": "Contraseña olvidada",
     "forgotYourPassword": "¿Olvidaste tu contraseña?",
+    "hello": "Hola",
     "invalidEmail": "Email no válido",
     "letsStart": "Empecemos",
     "password": "Contraseña",
     "passwordsDoNotMatch": "Las contraseñas no coinciden",
     "repeatPassword": "Repite la contraseña",
+    "send": "Enviar", 
     "signIn": "Iniciar sesión",
     "signUp": "Regístrate",
     "weakPassword": "Contraseña débil",
