Add responsive settings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,10 +7,12 @@
     "forgottenPassword": "Forgotten password",
     "forgotYourPassword": "Forgot your password?",
     "hello": "Hello",
+    "home": "Home",
     "invalidEmail": "Invalid email",
     "letsStart": "Let's start",
     "password": "Password",
     "passwordsDoNotMatch": "Passwords do not match",
+    "profile": "Profile",
     "repeatPassword": "Repeat password",
     "send": "Send",   
     "signIn": "Sign in",   
