--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -7,10 +7,12 @@
     "forgottenPassword": "Contraseña olvidada",
     "forgotYourPassword": "¿Olvidaste tu contraseña?",
     "hello": "Hola",
+    "home": "Inicio",
     "invalidEmail": "Email no válido",
     "letsStart": "Empecemos",
     "password": "Contraseña",
     "passwordsDoNotMatch": "Las contraseñas no coinciden",
+    "profile": "Perfil",
     "repeatPassword": "Repite la contraseña",
     "send": "Enviar", 
     "signIn": "Iniciar sesión",
