Add profile page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,14 @@
 {
+    "aboutYou": "About you",
+    "account": "Account",
+    "addPhone": "Add phone",
+    "address": "Address",
     "alreadyHaveAnAccount": "Already have an account?",
+    "changePassword": "Change password",
     "checkYourEmail": "Check your email",
+    "details": "Details",
     "dontHaveAnAccount": "Don't have an account?",
+    "editProfile": "Edit profile",
     "email": "Email",
     "enterYourEmailToResetYourPassword": "Enter your email to reset your password",
     "forgottenPassword": "Forgotten password",
@@ -10,13 +17,18 @@
     "home": "Home",
     "invalidEmail": "Invalid email",
     "letsStart": "Let's start",
+    "notifications": "Notifications",
     "password": "Password",
     "passwordsDoNotMatch": "Passwords do not match",
+    "preferences": "Preferences",
     "profile": "Profile",
     "repeatPassword": "Repeat password",
     "send": "Send",   
     "signIn": "Sign in",   
     "signUp": "Sign up",   
+    "verification": "Verification",
+    "verifyEmail": "Verify email",
+    "verifyIdentification": "Verify identification",
     "weakPassword": "Weak password",   
     "welcome": "Welcome"   
 }
