--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,7 +1,14 @@
 {
+    "aboutYou": "Acerca de ti",
+    "account": "Cuenta",
+    "addPhone": "Añadir teléfono",
+    "address": "Dirección",
     "alreadyHaveAnAccount": "¿Ya tienes una cuenta?",
+    "changePassword": "Cambiar contraseña",
     "checkYourEmail": "Revisa tu correo",
+    "details": "Detalles",
     "dontHaveAnAccount": "¿No tienes una cuenta?",
+    "editProfile": "Editar perfil",
     "email": "Correo electrónico",
     "enterYourEmailToResetYourPassword": "Ingresa tu correo electrónico para restablecer tu contraseña",
     "forgottenPassword": "Contraseña olvidada",
@@ -10,13 +17,18 @@
     "home": "Inicio",
     "invalidEmail": "Email no válido",
     "letsStart": "Empecemos",
+    "notifications": "Notificaciones",
     "password": "Contraseña",
     "passwordsDoNotMatch": "Las contraseñas no coinciden",
+    "preferences": "Preferencias",
     "profile": "Perfil",
     "repeatPassword": "Repite la contraseña",
     "send": "Enviar", 
     "signIn": "Iniciar sesión",
     "signUp": "Regístrate",
+    "verification": "Verificación",   
+    "verifyEmail": "Verificar correo electrónico",
+    "verifyIdentification": "Verificar identificación",
     "weakPassword": "Contraseña débil",
     "welcome": "Bienvenido"
 }
