Add responsive form

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,6 +7,7 @@
     "changePassword": "Change password",
     "checkYourEmail": "Check your email",
     "details": "Details",
+    "displayName": "Display name",
     "dontHaveAnAccount": "Don't have an account?",
     "editProfile": "Edit profile",
     "email": "Email",
