--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -7,6 +7,7 @@
     "changePassword": "Cambiar contraseña",
     "checkYourEmail": "Revisa tu correo",
     "details": "Detalles",
+    "displayName": "Nombre para mostrar",
     "dontHaveAnAccount": "¿No tienes una cuenta?",
     "editProfile": "Editar perfil",
     "email": "Correo electrónico",
