feat: Add auth page from action

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,6 +18,8 @@
     "home": "Home",
     "invalidEmail": "Invalid email",
     "letsStart": "Let's start",
+    "newPassword": "New password",
+    "noAction": "No action",
     "notifications": "Notifications",
     "password": "Password",
     "passwordsDoNotMatch": "Passwords do not match",
