feat: Send oob code to verification and change password

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,12 +11,14 @@
     "dontHaveAnAccount": "Don't have an account?",
     "editProfile": "Edit profile",
     "email": "Email",
+    "emailVerified": "Email verified",
     "enterYourEmailToResetYourPassword": "Enter your email to reset your password",
     "forgottenPassword": "Forgotten password",
     "forgotYourPassword": "Forgot your password?",
     "hello": "Hello",
     "home": "Home",
     "invalidEmail": "Invalid email",
+    "invalidOobCode": "Invalid OOB Code",
     "letsStart": "Let's start",
     "newPassword": "New password",
     "noAction": "No action",
