--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -11,12 +11,14 @@
     "dontHaveAnAccount": "¿No tienes una cuenta?",
     "editProfile": "Editar perfil",
     "email": "Correo electrónico",
+    "emailVerified": "Correo electrónico verificado",
     "enterYourEmailToResetYourPassword": "Ingresa tu correo electrónico para restablecer tu contraseña",
     "forgottenPassword": "Contraseña olvidada",
     "forgotYourPassword": "¿Olvidaste tu contraseña?",
     "hello": "Hola",
     "home": "Inicio",
     "invalidEmail": "Email no válido",
+    "invalidOobCode": "Código OBB no válido",
     "letsStart": "Empecemos",
     "newPassword": "Nueva contraseña",
     "noAction": "No hay acciones",
