feat: Connect sign up with backend

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,6 +11,7 @@
     "dontHaveAnAccount": "Don't have an account?",
     "editProfile": "Edit profile",
     "email": "Email",
+    "emailNotFound": "Email not found",
     "emailVerified": "Email verified",
     "enterYourEmailToResetYourPassword": "Enter your email to reset your password",
     "forgottenPassword": "Forgotten password",
