feat: Add page to add and edit company

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,14 +1,19 @@
 {
     "aboutYou": "About you",
     "account": "Account",
+    "add": "Add",
+    "addCompany": "Add company",
     "addPhone": "Add phone",
     "address": "Address",
     "alreadyHaveAnAccount": "Already have an account?",
+    "cancel": "Cancel",
     "changePassword": "Change password",
     "checkYourEmail": "Check your email",
+    "description": "Description",
     "details": "Details",
     "displayName": "Display name",
     "dontHaveAnAccount": "Don't have an account?",
+    "editCompany": "Edit company",
     "editProfile": "Edit profile",
     "email": "Email",
     "emailNotFound": "Email not found",
@@ -29,9 +34,12 @@
     "preferences": "Preferences",
     "profile": "Profile",
     "repeatPassword": "Repeat password",
+    "save": "Save",   
     "send": "Send",   
     "signIn": "Sign in",   
-    "signUp": "Sign up",   
+    "signUp": "Sign up", 
+    "tradename": "Tradename",  
+    "update": "Update",
     "verification": "Verification",
     "verifyEmail": "Verify email",
     "verifyIdentification": "Verify identification",
