--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,14 +1,19 @@
 {
     "aboutYou": "Acerca de ti",
     "account": "Cuenta",
+    "add": "Add",
+    "addCompany": "Add company",
     "addPhone": "Añadir teléfono",
     "address": "Dirección",
     "alreadyHaveAnAccount": "¿Ya tienes una cuenta?",
+    "cancel": "Cancelar",
     "changePassword": "Cambiar contraseña",
     "checkYourEmail": "Revisa tu correo",
+    "description": "Descripción",
     "details": "Detalles",
     "displayName": "Nombre para mostrar",
     "dontHaveAnAccount": "¿No tienes una cuenta?",
+    "editCompany": "Editar empresa",
     "editProfile": "Editar perfil",
     "email": "Correo electrónico",
     "emailNotFound": "Correo electrónico no encontrado",
@@ -29,9 +34,12 @@
     "preferences": "Preferencias",
     "profile": "Perfil",
     "repeatPassword": "Repite la contraseña",
+    "save": "Guardar",
     "send": "Enviar", 
     "signIn": "Iniciar sesión",
     "signUp": "Regístrate",
+    "tradename": "Nombre comercial",
+    "update": "Actualizar",
     "verification": "Verificación",   
     "verifyEmail": "Verificar correo electrónico",
     "verifyIdentification": "Verificar identificación",
