feat: Add phone edit company page design

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,9 +9,11 @@
     "cancel": "Cancel",
     "changePassword": "Change password",
     "checkYourEmail": "Check your email",
+    "country": "Country",
     "description": "Description",
     "details": "Details",
     "displayName": "Display name",
+    "documentType": "Document type",
     "dontHaveAnAccount": "Don't have an account?",
     "editCompany": "Edit company",
     "editProfile": "Edit profile",
@@ -25,7 +27,11 @@
     "home": "Home",
     "invalidEmail": "Invalid email",
     "invalidOobCode": "Invalid OOB Code",
+    "juridicalPerson": "Juridical person",
+    "legalReason": "Legal reason",
     "letsStart": "Let's start",
+    "loading": "Loading",
+    "names": "Names",
     "newPassword": "New password",
     "noAction": "No action",
     "notifications": "Notifications",
@@ -38,6 +44,8 @@
     "send": "Send",   
     "signIn": "Sign in",   
     "signUp": "Sign up", 
+    "socialReason": "Social reason", 
+    "surnames": "Surnames",
     "tradename": "Tradename",  
     "update": "Update",
     "verification": "Verification",
