--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -9,9 +9,11 @@
     "cancel": "Cancelar",
     "changePassword": "Cambiar contraseña",
     "checkYourEmail": "Revisa tu correo",
+    "country": "País",
     "description": "Descripción",
     "details": "Detalles",
     "displayName": "Nombre para mostrar",
+    "documentType": "Tipo de documento",
     "dontHaveAnAccount": "¿No tienes una cuenta?",
     "editCompany": "Editar empresa",
     "editProfile": "Editar perfil",
@@ -22,10 +24,14 @@
     "forgottenPassword": "Contraseña olvidada",
     "forgotYourPassword": "¿Olvidaste tu contraseña?",
     "hello": "Hola",
-    "home": "Inicio",
+    "home": "Inicio",    
     "invalidEmail": "Email no válido",
     "invalidOobCode": "Código OBB no válido",
+    "juridicalPerson": "Persona jurídica",
+    "legalReason": "Razón jurídica",
     "letsStart": "Empecemos",
+    "loading": "Cargando",
+    "names": "Nombres",
     "newPassword": "Nueva contraseña",
     "noAction": "No hay acciones",
     "notifications": "Notificaciones",
@@ -38,6 +44,8 @@
     "send": "Enviar", 
     "signIn": "Iniciar sesión",
     "signUp": "Regístrate",
+    "socialReason": "Razón social", 
+    "surnames": "Apellidos",
     "tradename": "Nombre comercial",
     "update": "Actualizar",
     "verification": "Verificación",   
