feat: Add prototype of setting page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -42,6 +42,7 @@
     "repeatPassword": "Repeat password",
     "save": "Save",   
     "send": "Send",   
+    "setting": "Setting",   
     "signIn": "Sign in",   
     "signUp": "Sign up", 
     "socialReason": "Social reason", 
