--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -42,6 +42,7 @@
     "repeatPassword": "Repite la contraseña",
     "save": "Guardar",
     "send": "Enviar", 
+    "setting": "Configuración", 
     "signIn": "Iniciar sesión",
     "signUp": "Regístrate",
     "socialReason": "Razón social", 
